--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,9 @@
     user-select: none;
     -webkit-tap-highlight-color: transparent;
 }
+body{
+overflow: hidden;
+}
 
 .container {
     width: 100%;
@@ -44,7 +47,7 @@
     height: 90px;
     text-align: right;
     font-family: sans-serif;
-    font-size: 90px;
+    font-size: 70px;
     color: #000;
     border: 0.1px solid black;
     outline: none;
@@ -65,7 +68,7 @@
     box-shadow: 5px 5px 10px 0px rgba(95, 12, 56, 0.159);  
    position: relative;
     font-size: 30px;
- 
+    font-family: sans-serif;
     width: 80px;
     height: 80px;
     border-radius: 30px;
@@ -82,28 +85,11 @@
     transition: 0.1s;  
 }
 
-.cell_button:active:after{
-    box-shadow: none;
-}
 
-.cell_button::after{  
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 50%;
-    transform: translate(-50%,0);
-    border-radius: 30px;
-    bottom: 0px;
-    box-shadow: -5px -5px 10px 0px#afc2db27;
-}
 
 /*  */
 .cell_button.big{
     width: 165px;
-    border-radius: 30px;
-}
-.cell_button.big:after{
     border-radius: 30px;
 }
 
