--- a/style/main.css
+++ b/style/main.css
@@ -77,13 +77,14 @@ overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 0.1s;
+
     margin: 5px;
 }
 
 .cell_button:active{
     box-shadow: none;
-    transition: 0.1s;  
+   
+   opacity: 0.5;
 }
 
 
