--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,7 @@
 }
 body{
 overflow: hidden;
+
 }
 
 .container {
@@ -61,6 +62,7 @@ overflow: hidden;
 }
 
 .cell_button{
+    touch-action: manipulation;
     color: black;
     box-sizing: border-box;
     text-align: center;
@@ -77,8 +79,13 @@ overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     margin: 5px;
+    -webkit-user-select:none;
+     -moz-user-select:none;
+     -ms-user-select:none;
+     user-select:none;
+     transition: 0.1s;
 }
 
 .cell_button:active{
