--- a/style/main.css
+++ b/style/main.css
@@ -93,7 +93,12 @@ overflow: hidden;
    
    opacity: 0.5;
 }
-
+.btn-active{
+    transition: 0.1s;
+    box-shadow: none;
+   
+    opacity: 0.5;
+}
 
 
 /*  */
